--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
 	<div class="instagram-wrapper">
-		<div class="instagram-phone">
-			<img src="img/celular-2.png">
-			<img src="img/celular-1.png">
+		<div class="instagram-phone">			
+			<img src="img/celular-1.png">			
 		</div>
 		<div class="instagram-login">
 			<div class="group">
@@ -21,6 +20,21 @@
 				</div>
 				<a href="#" class="instagram-continuar">Continuar como selathbr</a>
 				<a href="#" class="instagram-sair">Remover Conta</a>
+			</div>
+			<div class="group">
+				<p class="not-account">Não é selathbr?</p>
+				<p class="notaccount">
+					<span class="link-blue">Alterar Conta</span>
+					ou
+					<span class="link-blue">Inscreva-se.</span>
+				</p>
+			</div>
+			<div class="download">
+				<p class="get">Baixe o Aplicativo</p>
+				<div class="lojas">
+					<a href="#" class="app-download"></a>
+					<a href="#" class="app-download"></a>
+				</div>
 			</div>
 		</div>
 	</div>
