correção de sintaxis, padronização com video do projeto

--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 <body>
 	<div class="instagram-wrapper">
 		<div class="instagram-phone">			
-			<img src="img/celular-1.png">			
+			<img src="img/celular.png" alt="celular">			
 		</div>
-		<div class="instagram-login">
+		<div class="instagram-continue">
 			<div class="group">
 				<img src="img/instagram-logo.png" class="instagram-logo" alt="Instagram Logo">
-				<div class="avatar">
+				<div class="profile-photo">
 					<img src="img/avatar.jpg" alt="Foto de Perfil">	
 				</div>
-				<a href="#" class="instagram-continuar">Continuar como selathbr</a>
-				<a href="#" class="instagram-sair">Remover Conta</a>
+				<a href="#" class="instagram-login">Continue como selathbr</a>
+				<a href="#" class="instagram-logout">Remover Conta</a>
 			</div>
 			<div class="group">
 				<p class="not-account">Não é selathbr?</p>
-				<p class="notaccount">
-					<span class="link-blue">Alterar Conta</span>
+				<p class="not-account">
+					<span class="link-blue">Alternar Contas</span>
 					ou
 					<span class="link-blue">Inscreva-se.</span>
 				</p>
 			</div>
-			<div class="download">
-				<p class="get">Baixe o Aplicativo</p>
-				<div class="lojas">
+			<div class="get-the-app">
+				<p class="get-app">Baixe o Aplicativo</p>
+				<div class="donwload">
 					<a href="#" class="app-download"></a>
 					<a href="#" class="app-download"></a>
 				</div>
