metodo background-image não funcionando, utilizado metodo com img

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<div class="get-the-app">
 				<p class="get-app">Baixe o Aplicativo</p>
 				<div class="donwload">
-					<a href="#" class="app-download"></a>
-					<a href="#" class="app-download"></a>
+					<a href="#" class="app-download"><img src="img/app-store.png"></a>
+					<a href="#" class="app-download"><img src="img/google-play.png"></a>
 				</div>
 			</div>
 		</div>
